--- a/public/dummy.html
+++ b/public/dummy.html
@@ -5,15 +5,17 @@
                 <div class="row">
                     @foreach($category as item)
                     <div class="col-md-4 mb-3">
-                        <div class="card">
-                            <img src="{{ asset('assets/uploads/category/'.$item->image) }}" alt="Image of the category">
-                            <div class="card-body">
-                                <h5>{{ $item->name }}</h5>
-                                <p>
-                                    {{ $item->description }}
-                                </p>
+                        <a href="{{ url('view-category/'.$item->id) }}">
+                            <div class="card">
+                                <img src="{{ asset('assets/uploads/category/'.$item->image) }}" alt="Image of the category">
+                                <div class="card-body">
+                                    <h5>{{ $item->name }}</h5>
+                                    <p>
+                                        {{ $item->description }}
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     @endforeach
                 </div>
